--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 :root {
   --branding-color: #2d435f;
   --main-color: #E5E0EF;
@@ -9,38 +5,39 @@
 
 }
 
-header,
-main {
+.box-container {
   background-color: var(--main-color);
-  margin-top: 10px;
-  padding: 3%;
-  border-radius: 8px;
+
+}
+
+.main {
+  margin-top: 2%;
 }
 
 .header {
-  border-radius: 0 0 8px 8px;
+  background-color: var(--main-color);
   color: var(--text-color);
 }
 
-.quiz-form {}
+.title-quiz {
+  color: var(--text-color);
+}
 
 .text-purple {
   color: var(--branding-color);
 }
 
 .main-container {
-  padding: 20%;
+  /* padding: 20%; */
   background-color: var(--branding-color);
 }
 
-.question {
+/* .question {
   display: flex;
   flex-direction: column;
-}
+} */
 
-input[type="radio"] {
-  background-color: var(--text-color);
-}
+
 
 
 /* button color */
@@ -52,4 +49,15 @@ input[type="radio"] {
 .button-color:hover {
   color: var(--text-color);
   border: 1px solid var(--text-color);
+}
+
+/* 
+// Example
+// Apply styles starting from medium devices and up to extra large devices */
+@media (max-width: 400px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    background-color: aqua;
+  }
 }
